@@ -190,7 +190,28 @@ set copyright "Copyright (c) 1997-2000 Red Hat, Inc.\n All rights\
 
 # So we can get away with using internal commands in Tcl/Tk 8.4
 tk::unsupported::ExposePrivateCommand *
-  
+
+# Now we can't use Source Navigator without the Ttk widgets of the tile extension
+if {[catch {package require tile} errorMsg]} {
+    tk_messageBox -icon error -type ok -message "Couldn't load Ttk widgets\n$errorMsg"
+    exit
+}
+
+set platform [tk windowingsystem]
+catch {
+    switch $platform {
+        "win32" {
+            if {[catch {ttk::setTheme vista}]} {
+                if {[catch {ttk::setTheme xpnative}]} {
+                    ttk::setTheme winnative
+                }
+            }
+        }
+	default {
+            ttk::setTheme default
+	}
+    }
+}  
 #force flag
 #on windows we must force focusing the window
 #on unix, let the window manager do this.
